<resources>
    <string name="app_name">FakeNeptun</string>
    <string name="username">Neptun kód</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="register">Regisztráció</string>
    <string name="email">Email cím</string>
    <string name="passwordAgain">Jelszó megerősítése</string>
    <string name="cancel">Mégse</string>
    <string name="familyName">Családnév</string>
    <string name="firstName">Vezetéknév</string>
    <string name="isTeacher">Tanár vagy?</string>
    <string name="cim">Cím</string>
    <string name="logout">Kijelentkezés</string>
    <string name="loginSuccess">✔ Sikeres bejelentkezés!</string>
    <string name="registerSuccess">✔ Sikeres regisztráció</string>
    <string name="diakneve">Diák neve</string>
    <string name="diakemail">diak.email@example.com</string>
    <string name="felv_tel">Felvétel</string>
    <string name="f_r_helyek_sz_ma_30">Férőhelyek száma: 30</string>
    <string name="id_tartam_45_perc">Időtartam: 45 perc</string>
    <string name="ra_neve">Óra neve</string>
    <string name="v_lassza_ki_a_tant_rgyat">Válassza ki a tantárgyat:</string>
    <string name="v_lassza_ki_a_di_kot">Válassza ki a diákot:</string>
    <string name="v_lassza_ki_a_jegyet">Válassza ki a jegyet:</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="jegy_ment_se">Jegy mentése</string>
    <string name="j">Új</string>
    <string name="id_tartam_perc">Időtartam (perc)</string>
    <string name="f_r_helyek_sz_ma">Férőhelyek száma</string>
    <string name="ment_s">Mentés</string>
    <string name="jegy">Jegy:</string>
    <string name="tant_rgy">Tantárgy:</string>
    <string name="dv_felhaszn_l">Üdv, Felhasználó</string>
    <string name="t_rl_s">Törlés</string>
    <string name="felad_neve">Feladó neve</string>
    <string name="zenet_tartalma">Üzenet tartalma</string>
    <string name="id_b_lyeg">Időbélyeg</string>
    <string name="rj_zenetet">Írj üzenetet…</string>
    <string name="k_ld_s">Küldés</string>
    <string name="vissza">Vissza</string>
</resources>